# toolpath-rl

./: .gitignore  README.md  pyproject.toml
configs/: env_2d.yaml  train_ppo.yaml
scripts/: animate_learning.py  visualize_agent.py
src/agents/: feature_extractor.py  train.py
src/engines/: base.py  engine_2d.py
src/env/: toolpath_env.py
tests/: test_engine_2d.py  test_env.py  test_policy.py
